2010-03-12  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_start_call_back): Replace the definition type to
	GC_start_callback_proc.
	* alloc.c (GC_set_start_callback, GC_get_start_callback): New
	setter/getter function.
	* alloc.c (GC_try_to_collect_inner): Call GC_notify_full_gc()
	unconditionally (because GC_try_to_collect_inner always does full
	GC).
	* include/gc_mark.h (GC_start_callback_proc): New type.
	* include/gc_mark.h (GC_set_start_callback,
	GC_get_start_callback): New API function declaration.

2010-03-12  Ivan Maidanski <ivmai@mail.ru>

	* doc/README.macros (USE_GET_STACKBASE_FOR_MAIN): Document.
	* os_dep.c (GC_get_main_stack_base): Recognize
	USE_GET_STACKBASE_FOR_MAIN (only if THREADS and LINUX_STACKBOTTOM)
	and use GC_get_stack_base() in this case.

2010-03-05  Ivan Maidanski <ivmai@mail.ru> (really Burkhard Linke)

	* os_dep.c (GC_get_stack_base): Add LOCK/UNLOCK() (since
	GC_find_limit_with_bound() should be called with the lock held).
	* backgraph.c (FOR_EACH_PRED): Fix a typo.

2010-03-05  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_set_stop_func, GC_get_stop_func): Add
	DCL_LOCK_STATE.
	* finalize.c (GC_notify_or_invoke_finalizers): Ditto.
	* gc_dlopen.c (disable_gc_for_dlopen): Ditto.
	* gcj_mlc.c (maybe_finalize, GC_debug_gcj_malloc): Ditto.
	* mark.c (GC_print_trace): Ditto.
	* misc.c (GC_set_warn_proc, GC_get_warn_proc, GC_enable,
	GC_disable, GC_new_free_list, GC_new_kind, GC_new_proc,
	GC_set_oom_fn, GC_get_oom_fn, GC_set_finalizer_notifier,
	GC_get_finalizer_notifier): Ditto.
	* os_dep.c (GC_get_stack_base, GC_print_callers): Ditto.
	* pthread_support.c (GC_is_thread_tsd_valid,
	GC_wait_for_gc_completion, GC_init_parallel, GC_do_blocking_inner,
	GC_call_with_gc_active, GC_unregister_my_thread, pthread_join,
	pthread_detach, GC_register_my_thread, GC_inner_start_routine,
	pthread_create): Ditto.
	* reclaim.c (GC_print_all_errors): Ditto.
	* win32_threads.c (GC_is_thread_tsd_valid, GC_register_my_thread,