@@ -1,3 +1,9 @@
+2010-03-13  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c (GC_get_main_stack_base): Use pthread_getattr_np() and
+	pthread_attr_getstack() instead of GC_get_stack_base() (and check
+	returned stackaddr for NULL); output a warning on failure.
+
 2010-03-12  Ivan Maidanski <ivmai@mail.ru>
 
 	* alloc.c (GC_start_call_back): Replace the definition type to
